# vm2mqtt

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/vm2mqtt/: __init__.py  mqtt.py  portainer.py  proxmox.py
