[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vm2mqtt"
version = "0.0.1"
authors = [
  { name="Benny Colyn", email="benny.colyn+dev@gmail.com" },
]
description = "Starts/stops containers and VMs via MQTT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "proxmoxer", "requests"
]

[project.urls]
Homepage = "https://github.com/bcolyn/vm2mqtt"
Issues = "https://github.com/bcolyn/vm2mqtt/issues"